Machine Learning Draft

--- a/Data Import and Prep.ipynb
+++ b/Data Import and Prep.ipynb
@@ -553,6 +553,7 @@
     "stdProduction_lin = stdProduction_lin[stdProduction_lin['strucpro'].isin(['PR_HU_EU']) ]\n",
     "stdProduction_lin  = stdProduction_lin[~stdProduction_lin['OBS_FLAG'].isin(['c','n'])]\n",
     "stdProduction_lin = stdProduction_lin.drop(stdProduction_lin[stdProduction_lin['OBS_VALUE'] == 0].index)\n",
+    "stdProduction_lin = stdProduction_lin.dropna(subset = ['OBS_VALUE'])\n",
     "stdProduction_lin['OBS_VALUE'] = stdProduction_lin['OBS_VALUE']*1000\n",
     "stdProduction_lin = stdProduction_lin.rename(columns={\"OBS_VALUE\":\"stdTonnes\",\n",
     "                                                      \"crops\":\"mostGrownStd\"})\n",
@@ -561,7 +562,7 @@
     "stdProduction_lin = stdProduction_lin.drop(columns = ['DATAFLOW', 'LAST UPDATE', 'freq', 'OBS_FLAG', 'strucpro'])\n",
     "stdProduction_lin = stdProduction_lin.sort_values('stdTonnes').drop_duplicates(['geo', 'TIME_PERIOD'], keep='last')\n",
     "\n",
-    "#print(stdProduction_lin.head(10))\n",
+    "#print(stdProduction_lin.head(300))\n",
     "#missing_values_table(orgTonne)"
    ]
   },
@@ -593,34 +594,32 @@
      "output_type": "stream",
      "text": [
       "Your selected dataframe has 16 columns.\n",
-      "There are 14 columns that have missing values.\n",
+      "There are 13 columns that have missing values.\n",
       "                                      Missing Values  % of Total Values\n",
       "units                                                                  \n",
-      "Environmental biotechnology                      338               91.1\n",
-      "Animal and dairy science                         331               89.2\n",
-      "Agricultural biotechnology                       329               88.7\n",
-      "Other agricultural sciences                      329               88.7\n",
-      "Health sciences                                  327               88.1\n",
-      "Agriculture, forestry, and fisheries             326               87.9\n",
-      "Sociology                                        326               87.9\n",
-      "Veterinary science                               326               87.9\n",
-      "Humanities                                        18                4.9\n",
-      "Agricultural sciences                              8                2.2\n",
-      "Engineering and technology                         6                1.6\n",
-      "Social sciences                                    6                1.6\n",
-      "Natural sciences                                   4                1.1\n",
-      "Medical and health sciences                        3                0.8\n",
+      "Environmental biotechnology                      667               96.2\n",
+      "Veterinary science                               657               94.8\n",
+      "Animal and dairy science                         654               94.4\n",
+      "Health sciences                                  652               94.1\n",
+      "Other agricultural sciences                      649               93.7\n",
+      "Agricultural biotechnology                       648               93.5\n",
+      "Agriculture, forestry, and fisheries             638               92.1\n",
+      "Sociology                                        637               91.9\n",
+      "Humanities                                        37                5.3\n",
+      "Agricultural sciences                             18                2.6\n",
+      "Medical and health sciences                       18                2.6\n",
+      "Engineering and technology                        14                2.0\n",
+      "Social sciences                                   11                1.6\n",
       "Your selected dataframe has 8 columns.\n",
-      "There are 6 columns that have missing values.\n",
+      "There are 5 columns that have missing values.\n",
       "                             Missing Values  % of Total Values\n",
       "units                                                         \n",
-      "Humanities                               18                4.9\n",
-      "Agricultural sciences                     8                2.2\n",
-      "Engineering and technology                6                1.6\n",
-      "Social sciences                           6                1.6\n",
-      "Natural sciences                          4                1.1\n",
-      "Medical and health sciences               3                0.8\n",
-      "(371, 8)\n"
+      "Humanities                               37                5.3\n",
+      "Agricultural sciences                    18                2.6\n",
+      "Medical and health sciences              18                2.6\n",
+      "Engineering and technology               14                2.0\n",
+      "Social sciences                          11                1.6\n",
+      "(693, 8)\n"
      ]
     }
    ],
@@ -628,7 +627,7 @@
     "research = pd.read_csv(research_Path)\n",
     "research = pd.merge(research, fordCodes, on=['ford'], how='inner')\n",
     "\n",
-    "research = research[research['sectperf'].isin(['TOTAL']) ]\n",
+    "research = research[research['sectperf'].isin(['GOV']) ]\n",
     "research = research[research['ford'].isin(['FORD1','FORD2','FORD3','FORD4', 'FORD5', 'FORD6', 'FORD401', 'FORD402', 'FORD403', 'FORD404', 'FORD405', 'FORD504', 'FORD303', 'FORD208']) ]\n",
     "research = research[research['unit'].isin(['EUR_HAB']) ]\n",
     "research = research.pivot(index=['geo', 'TIME_PERIOD'], columns='units', values='OBS_VALUE').reset_index() \n",
@@ -645,133 +644,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "e6584a7e-33ff-4cd7-a044-7e9777c4aca4",
-   "metadata": {},
-   "source": [
-    "#Median/Mean Income Data for Stats Analysis\n",
-    "incomeStats = pd.read_csv(income_Path)\n",
-    "incomeStats  = incomeStats[incomeStats['unit'].isin(['EUR'])]\n",
-    "incomeStats  = incomeStats[incomeStats['sex'].isin(['T'])]\n",
-    "incomeStats['TIME_PERIOD'] = incomeStats['TIME_PERIOD'].apply(lambda x: str(x)+ '_y')\n",
-    "incomeStats = incomeStats.drop(columns = ['DATAFLOW', 'LAST UPDATE', 'freq', 'OBS_FLAG', 'unit'])\n",
-    "incomeStats = incomeStats.pivot(index=['age'], columns=['TIME_PERIOD', 'indic_il', 'geo'], values='OBS_VALUE').reset_index() \n",
-    "#incomeStats.columns = [''.join(col) for col in income.columns.values]\n",
-    "incomeStats.head()\n",
-    "#income.shape\n",
-    "#income.info()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "f0f691d4-bda9-45a0-9d01-97f4b630416f",
-   "metadata": {},
-   "source": [
-    "stdProduction_lin = pd.read_csv(stdProduction_path)\n",
-    "stdProduction_lin = stdProduction_lin[stdProduction_lin['crops'].str.contains(\"0000\")]\n",
-    "stdProduction_lin = stdProduction_lin[stdProduction_lin['strucpro'].isin(['AR', 'PR_HU_EU']) ]\n",
-    "stdProduction_lin  = stdProduction_lin[~stdProduction_lin['OBS_FLAG'].isin(['c','n'])]"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "91e26edc-ad63-440f-bbc4-c157fe1d4b95",
-   "metadata": {},
-   "source": [
-    "#Standard Crop Production Import\n",
-    "stdProduction_lin = pd.read_csv(stdProduction_path)\n",
-    "stdProduction_lin = stdProduction_lin[stdProduction_lin['crops'].str.contains(\"0000\")]\n",
-    "stdProduction_lin = stdProduction_lin[stdProduction_lin['strucpro'].isin(['AR', 'PR_HU_EU']) ]\n",
-    "stdProduction_lin  = stdProduction_lin[~stdProduction_lin['OBS_FLAG'].isin(['c','n'])]\n",
-    "stdProduction_lin_yield = stdProduction_lin[stdProduction_lin['strucpro'].isin(['YI_HU_EU']) ]\n",
-    "stdProduction = stdProduction_lin.pivot(index=['crops', 'geo', 'TIME_PERIOD'], columns='strucpro', values='OBS_VALUE').reset_index() \n",
-    "stdProduction = stdProduction.dropna(subset=['AR', 'PR_HU_EU']) #Removes last NAN value in SET\n",
-    "#stdProduction = stdProduction[(stdProduction['AR'] != 0)] #Removes last NAN value in SET\n",
-    "stdProduction['area_HA'] = stdProduction['AR']*1000\n",
-    "stdProduction['tonnes'] = stdProduction['PR_HU_EU']*1000"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "ab0eea33-8762-4b6d-b3d8-bd78333433d5",
-   "metadata": {},
-   "source": [
-    "#missing_values_table(stdProduction)\n",
-    "#print('Unique Geo:' + str(stdProduction.geo.nunique()))\n",
-    "#print(stdProduction.groupby('TIME_PERIOD').geo.nunique())\n",
-    "#stdProduction.describe()\n",
-    "#stdProduction.info()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "0c031f91-4421-43c3-bb79-16d93afba361",
-   "metadata": {},
-   "source": [
-    "del stdProduction_lin \n",
-    "del stdProduction_lin_yield"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "cf38ae46-1a66-44ef-b6ff-4da6298bb12f",
-   "metadata": {},
-   "source": [
-    "#Organic Crop Production Import\n",
-    "orgArea_all = pd.read_csv(orgArea_path)\n",
-    "orgArea_total = orgArea_all[(orgArea_all['agprdmet'] == 'TOTAL') & (orgArea_all['unit']=='HA' ) & orgArea_all['crops'].str.contains(\"0000\")]\n",
-    "orgArea_total = orgArea_total.rename(columns={\"OBS_VALUE\":\"area_HA\"})\n",
-    "#orgArea_total.info()\n",
-    "orgArea_total = orgArea_total[~orgArea_total['OBS_FLAG'].isin(['c','n'])]\n",
-    "orgArea_total = orgArea_total.drop(columns = ['DATAFLOW', 'LAST UPDATE', 'freq', 'unit', 'agprdmet', 'OBS_FLAG'])\n",
-    "orgArea_total = orgArea_total.dropna(subset=['area_HA']) #Removes last NAN value in SET\n",
-    "orgArea_total = orgArea_total[(orgArea_total['area_HA'] != 0)] #Removes 0 area values in SET which cause inf\n",
-    "#missing_values_table(orgArea_total)\n",
-    "#orgArea_total.head(25)\n",
-    "\n",
-    "#del orgArea_all\n",
-    "\n",
-    "orgTonne = pd.read_csv(orgTonne_path)\n",
-    "orgTonne = orgTonne[orgTonne['crops'].str.contains(\"0000\")]\n",
-    "orgTonne = orgTonne.rename(columns={\"OBS_VALUE\":\"tonnes\"})\n",
-    "#orgTonne.info()\n",
-    "orgTonne = orgTonne[~orgTonne['OBS_FLAG'].isin(['c','n'])]\n",
-    "orgTonne = orgTonne.drop(columns = ['DATAFLOW', 'LAST UPDATE', 'freq', 'unit', 'OBS_FLAG'])\n",
-    "#missing_values_table(orgTonne)\n",
-    "\n",
-    "orgProduction = pd.merge(orgArea_total, orgTonne, on=['crops', 'geo', 'TIME_PERIOD'], how='inner', suffixes=('_A','_T'))\n",
-    "#orgProduction.head(100)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "de0d6982-9a0e-4d8d-8f91-1ed1dc1a6535",
-   "metadata": {},
-   "source": [
-    "cropProd = pd.merge( stdProduction, orgProduction, on=['crops', 'geo', 'TIME_PERIOD'], how='inner', suffixes=('_std','_org'))\n",
-    "cropProd = pd.merge( cropProd, cropsCodes, on=['crops'], how='inner')\n",
-    "cropProd['geo'] = cropProd['geo'].astype('str') \n",
-    "#print(cropProd.groupby('TIME_PERIOD').geo.nunique())\n",
-    "#hriPesticide.shape\n",
-    "#cropProd.describe()\n",
-    "#cropProd.info()\n",
-    "#cropProd.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "93372301-3d76-4271-80b1-63c76c0ddfb9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(orgProduction.geo.unique())\n",
-    "#print(stdProduction.geo.unique())\n",
-    "#print(orgArea_all.geo.unique())\n",
-    "#print(orgTonne.geo.unique())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "98ec48fe-18d0-4614-a1ef-f7ec6c5c6d68",
    "metadata": {
@@ -782,29 +654,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "a4c3802b-b735-4b7b-bec9-e538b3a20516",
-   "metadata": {},
-   "source": [
-    "cropProd['tonne_per_HA_org'] = cropProd['tonnes_org']/cropProd['area_HA_org']\n",
-    "cropProd['tonne_per_HA_std'] = cropProd['tonnes_std']/cropProd['area_HA_std']\n",
-    "cropProd['util_ratio'] = cropProd['tonne_per_HA_org']/cropProd['tonne_per_HA_std']\n",
-    "\n",
-    "cropProdTotals = cropProd[cropProd['crops'].str.contains(\"0000\")]\n",
-    "\n",
-    "cropProdTotals_Geo_Y= cropProdTotals.groupby(['geo', 'TIME_PERIOD']).sum(numeric_only = True).reset_index()\n",
-    "#cropProdTotals_Geo= cropProdTotals.groupby(['geo']).sum(numeric_only = True).reset_index()\n",
-    "#cropProdTotals_crop_Y= cropProdTotals.groupby(['crops', 'crop_name', 'TIME_PERIOD']).sum(numeric_only = True).reset_index()\n",
-    "#cropProdTotals_crop= cropProdTotals.groupby(['crops', 'crop_name']).sum(numeric_only = True).reset_index()\n",
-    "\n",
-    "#cropProdTotals_Geo_Y.shape\n",
-    "#cropProdTotals_Geo_Y.head(10)\n",
-    "#print(cropProdTotals.groupby(['TIME_PERIOD', 'geo']).size())"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "590402ab",
    "metadata": {},
    "outputs": [
@@ -814,7 +665,7 @@
        "(279, 4)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "d21fe8db-6230-49fe-b11f-083570d5ff7a",
    "metadata": {
     "tags": []
@@ -839,7 +690,7 @@
        "(279, 37)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "d87d1752-bff3-4821-89c2-633a87b2fbe1",
    "metadata": {},
    "outputs": [],
@@ -867,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "0b25c97a-9527-4a10-ad4e-b155d2f23808",
    "metadata": {},
    "outputs": [],
