Too much has happened, will fix mess in the morning

--- a/Reddit Comment Scraping Test.ipynb
+++ b/Reddit Comment Scraping Test.ipynb
@@ -52,7 +52,7 @@
     "CLIENT_SECRET = config[\"CLIENT_SECRET\"]\n",
     "USER_AGENT = config[\"USER_AGENT\"]\n",
     "\n",
-    "searchLink = 'https://www.reddit.com/r/ireland/comments/p5nl08/irish_farmers_widely_using_glyphosate_roundup_to/'"
+    "searchLink = 'https://www.reddit.com/r/ireland/comments/y65iud/ireland_has_one_of_the_lowest_rates_of_food_price/'"
    ]
   },
   {
@@ -138,38 +138,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>TechM635</td>\n",
-       "      <td>Here’s a report from NUIG from three years ago...</td>\n",
-       "      <td>42</td>\n",
-       "      <td>1.629145e+09</td>\n",
+       "      <td>BCBoxMan</td>\n",
+       "      <td>Ireland has always done food well. Excellent q...</td>\n",
+       "      <td>561</td>\n",
+       "      <td>1.665998e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>lwkt2005</td>\n",
-       "      <td>Hey fellow biochemists of Reddit, how's the Ph...</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1.629150e+09</td>\n",
+       "      <td>FreeAndFairErections</td>\n",
+       "      <td>Food is genuinely super cheap in Ireland relat...</td>\n",
+       "      <td>218</td>\n",
+       "      <td>1.665998e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>raybone12</td>\n",
-       "      <td>OP how much of Ireland’s tillage crops go for ...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.629226e+09</td>\n",
+       "      <td>gokurotfl</td>\n",
+       "      <td>As a Polish person I can confirm that. I visit...</td>\n",
+       "      <td>61</td>\n",
+       "      <td>1.666002e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>InisElga</td>\n",
-       "      <td>There is limited human exposure data available...</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1.629148e+09</td>\n",
+       "      <td>Null_Trooper</td>\n",
+       "      <td>Poor, poor Turkey.\\n\\nAnd damn, the Swiss are ...</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1.666002e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>DestroyAndCreate</td>\n",
-       "      <td>&gt;It looks like the comments have been taken ov...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.629210e+09</td>\n",
+       "      <td>tomashen</td>\n",
+       "      <td>This is actually pretty accurate. I know peopl...</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1.666007e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -179,73 +179,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>240</th>\n",
-       "      <td>WhatsTheCraicNow</td>\n",
-       "      <td>So you're saying that there's no organic milk ...</td>\n",
+       "      <th>406</th>\n",
+       "      <td>Bobzer</td>\n",
+       "      <td>I screw up solar panels and work on electric c...</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.629217e+09</td>\n",
+       "      <td>1.666009e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>241</th>\n",
-       "      <td>angrygorrilla</td>\n",
-       "      <td>Show me once where I even suggested such a thi...</td>\n",
+       "      <th>407</th>\n",
+       "      <td>themagpie36</td>\n",
+       "      <td>I guess you're talking about my scumbag commen...</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.629217e+09</td>\n",
+       "      <td>1.666131e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>242</th>\n",
-       "      <td>WhatsTheCraicNow</td>\n",
-       "      <td>You just said farmers in Ireland spray their g...</td>\n",
+       "      <th>408</th>\n",
+       "      <td>N/A</td>\n",
+       "      <td>[deleted]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.666009e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>409</th>\n",
+       "      <td>Reddit_Is_Bollox</td>\n",
+       "      <td>Yes. I am. Apology accepted.  \\n\\nAnd that vid...</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.629218e+09</td>\n",
+       "      <td>1.666131e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>243</th>\n",
-       "      <td>angrygorrilla</td>\n",
-       "      <td>Since when is every farmer organic? The actual...</td>\n",
+       "      <th>410</th>\n",
+       "      <td>Bobzer</td>\n",
+       "      <td>Don't trust me?\\n\\nEither way, the thing I do ...</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.629219e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>244</th>\n",
-       "      <td>angrygorrilla</td>\n",
-       "      <td>You started on about shit not being put on foo...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.629220e+09</td>\n",
+       "      <td>1.666009e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>245 rows × 4 columns</p>\n",
+       "<p>411 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Author                                            Comment  \\\n",
-       "0            TechM635  Here’s a report from NUIG from three years ago...   \n",
-       "1            lwkt2005  Hey fellow biochemists of Reddit, how's the Ph...   \n",
-       "2           raybone12  OP how much of Ireland’s tillage crops go for ...   \n",
-       "3            InisElga  There is limited human exposure data available...   \n",
-       "4    DestroyAndCreate  >It looks like the comments have been taken ov...   \n",
-       "..                ...                                                ...   \n",
-       "240  WhatsTheCraicNow  So you're saying that there's no organic milk ...   \n",
-       "241     angrygorrilla  Show me once where I even suggested such a thi...   \n",
-       "242  WhatsTheCraicNow  You just said farmers in Ireland spray their g...   \n",
-       "243     angrygorrilla  Since when is every farmer organic? The actual...   \n",
-       "244     angrygorrilla  You started on about shit not being put on foo...   \n",
+       "                   Author                                            Comment  \\\n",
+       "0                BCBoxMan  Ireland has always done food well. Excellent q...   \n",
+       "1    FreeAndFairErections  Food is genuinely super cheap in Ireland relat...   \n",
+       "2               gokurotfl  As a Polish person I can confirm that. I visit...   \n",
+       "3            Null_Trooper  Poor, poor Turkey.\\n\\nAnd damn, the Swiss are ...   \n",
+       "4                tomashen  This is actually pretty accurate. I know peopl...   \n",
+       "..                    ...                                                ...   \n",
+       "406                Bobzer  I screw up solar panels and work on electric c...   \n",
+       "407           themagpie36  I guess you're talking about my scumbag commen...   \n",
+       "408                   N/A                                          [deleted]   \n",
+       "409      Reddit_Is_Bollox  Yes. I am. Apology accepted.  \\n\\nAnd that vid...   \n",
+       "410                Bobzer  Don't trust me?\\n\\nEither way, the thing I do ...   \n",
        "\n",
        "     Score          Date  \n",
-       "0       42  1.629145e+09  \n",
-       "1       24  1.629150e+09  \n",
-       "2        3  1.629226e+09  \n",
-       "3        8  1.629148e+09  \n",
-       "4        4  1.629210e+09  \n",
+       "0      561  1.665998e+09  \n",
+       "1      218  1.665998e+09  \n",
+       "2       61  1.666002e+09  \n",
+       "3       46  1.666002e+09  \n",
+       "4       41  1.666007e+09  \n",
        "..     ...           ...  \n",
-       "240      2  1.629217e+09  \n",
-       "241      1  1.629217e+09  \n",
-       "242      1  1.629218e+09  \n",
-       "243      2  1.629219e+09  \n",
-       "244      2  1.629220e+09  \n",
+       "406      2  1.666009e+09  \n",
+       "407      1  1.666131e+09  \n",
+       "408      2  1.666009e+09  \n",
+       "409      1  1.666131e+09  \n",
+       "410      2  1.666009e+09  \n",
        "\n",
-       "[245 rows x 4 columns]"
+       "[411 rows x 4 columns]"
       ]
      },
      "execution_count": 8,
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "redditComments.to_csv(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Datasets\\redditCommentsGlyphosate.csv\")"
+    "redditComments.to_csv(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Datasets\\redditCommentsFoodInflation.csv\")"
    ]
   }
  ],
